--- a/src/varSCSS/_variables.scss
+++ b/src/varSCSS/_variables.scss
@@ -8,3 +8,5 @@ $link_color: #2E327180;
 $username_color : #1115ea80;
 $class_color : #10f026ed;
 $gray : gainsboro;
+$white_smoke: whitesmoke;
+$white_reduce: #ffffff83;
